# GloziMachine

./: .gitignore  README.md
KmdfHelloWorld/: driver.c
assemblySim/: CMakeLists.txt  lc3_config.h  lc3_processor.c  utils_core.c
assemblyVM_Tutorial/: CMakeLists.txt  main.c  memory.c  opfs.c
